fix: 리뷰가 없는 번역 내역 상세 조회 에러 해결